fixing visible issues

--- a/components/general/searchbox/styles.module.scss
+++ b/components/general/searchbox/styles.module.scss
@@ -37,7 +37,7 @@
     color: $clr-gray400;
     outline: none;
     width: 100%;
-    padding: 0.85rem 10rem 0.85rem 5rem;
+    padding: 0.85rem 2rem 0.85rem 5rem;
     border-radius: 0.2rem;
   }
 }
