--- a/components/pages/dashboard/search/youtube/styles.module.scss
+++ b/components/pages/dashboard/search/youtube/styles.module.scss
@@ -35,6 +35,10 @@
     width: 100%;
     gap: 25px;
     margin-bottom: 20px;
+
+    @media (max-width: 767px) {
+      flex-direction: column;
+    }
   }
 
   .search_wrap {
